--- a/index.html
+++ b/index.html
@@ -8,76 +8,69 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns"
+        crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
 </head>
 
 <body>
-
-    <nav class="navbar navbar-expand-lg navbar-color ">
-        <a id="brandName" class="navbar-brand navbar-text" href="#">Ping Pong Scores</a>
-        <button class="navbar-toggler navbar-dark " type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon "></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a id="HomeLink" class="nav-link navbar-text" href="#">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a id="SignUpLink" class="nav-link navbar-text" href="#">Sign Up</a>
-                </li>
-                <li class="nav-item">
-                    <a id="LoginLink" class="nav-link navbar-text" href="#">Log In</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
     <div id="script-placement">
-
+        <div class="card pt-4  text-center">
+            <div class="card-header card-color">
+                <h1 class="fancy-font"><i class="fas fa-table-tennis"></i> Welcome to BCCA's Ping Pong Score Keeper <i
+                        class="fas fa-table-tennis"></i></h1>
+            </div>
+        </div>
+        <div class="formLinkContainer container text-center pt-5">
+            <a id="SignUpLink" class="formLink" href="#">
+                <button type="button" class="btn color-button">
+                    <h1 class="fancy-font">Sign Up</h1>
+                </button>
+            </a>
+            <h1>Or</h1>
+            <a id="LoginLink" class="formLink" href="#">
+                <button type="button" class="btn color-button">
+                    <h1 class="fancy-font">Log In</h1>
+                </button>
+            </a>
+        </div>
     </div>
 
 
-    <script id="showHomePage" type="text/x-handlebars-template">
-        <div class="container">
-            <h1>{{emptyMessage}}</h1>
-        </div>
-    </script>
-
-
     <script id="showLogin" type="text/x-handlebars-template">
-        <div class="container pt-4">
-            <form>
-                <div class="form-group">
-                    <label for="exampleInputUsername">{{username}}</label>
-                    <input type="email" class="form-control col-4" id="existingUsername" placeholder="Enter your username">
-                </div>
-                <div class="form-group">
-                    <label for="exampleInputPassword1">{{password}}</label>
-                    <input type="password" class="form-control col-4" id="existingPassword" placeholder="Enter your password">
-                </div>
-                <button type="submit" class="btn btn-success">{{buttonMessage}}</button>
-            </form>
-        </div>
+    <div class="container pt-4">
+        <form method="POST">
+            <div class="form-group">
+                <label>{{username}}</label>
+                <input type="text" class="form-control col-4" id="existingUsername" placeholder="Enter your username">
+            </div>
+            <div class="form-group">
+                <label>{{password}}</label>
+                <input type="password" class="form-control col-4" id="existingPassword" placeholder="Enter your password">
+            </div>
+            <button id="loginButton" type="submit" class="btn btn-success pt-2">{{buttonMessage}}</button>
+        </form>
+    </div>
     </script>
 
     <script id="showSignUp" type="text/x-handlebars-template">
         <div class="container pt-4">
-            <form>
+            <form method="POST">
                 <div class="form-group">
-                    <label for="exampleInputEmail1">{{username}}</label>
-                    <input type="text" class="form-control" id="inputUsername" placeholder="Enter a username" required>
+                    <label>{{username}}</label>
+                    <input type="text" class="form-control col-4" id="inputUsername" placeholder="Enter a username" required>
                 </div>
                 <div class="form-group">
-                    <label for="exampleInputPassword1">{{password}}</label>
-                    <input type="password" class="form-control" id="inputPassword" placeholder="Enter a password" required>
+                    <label>{{password}}</label>
+                    <input type="password" class="form-control col-4" id="inputPassword" placeholder="Enter a password" required>
                 </div>
                 <div class="form-group">
-                    <label for="exampleInputPassword1">{{passwordConfirm}}</label>
-                    <input type="password" class="form-control" id="inputPasswordConfirmation" placeholder="Repeat your password"
+                    <label>{{passwordConfirm}}</label>
+                    <input type="password" class="form-control col-4" id="inputPasswordRepeat" placeholder="Repeat your password"
                         required>
                 </div>
-                <button type="submit" class="btn btn-success">{{buttonMessage}}</button>
+                <button id="signupButton" type="submit" class="btn btn-success pt-2 ">{{buttonMessage}}</button>
             </form>
         </div>
     </script>
