--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
     <script id="showLogin" type="text/x-handlebars-template">
     <div class="container pt-4">
         <form method="POST">
-            <div class="form-group">
-                <label>{{username}}</label>
+            <div class="form-group ">
+                <label class="fancy-font">{{username}}</label>
                 <input type="text" class="form-control col-4" id="existingUsername" placeholder="Enter your username">
             </div>
-            <div class="form-group">
-                <label>{{password}}</label>
+            <div class="form-group ">
+                <label class="fancy-font">{{password}}</label>
                 <input type="password" class="form-control col-4" id="existingPassword" placeholder="Enter your password">
             </div>
-            <button id="loginButton" type="submit" class="btn btn-success pt-2">{{buttonMessage}}</button>
+            <button id="loginButton" type="submit" class="btn btn-success pt-2 fancy-font">{{buttonMessage}}</button>
         </form>
     </div>
     </script>
@@ -58,19 +58,19 @@
         <div class="container pt-4">
             <form method="POST">
                 <div class="form-group">
-                    <label>{{username}}</label>
+                    <label class="fancy-font">{{username}}</label>
                     <input type="text" class="form-control col-4" id="inputUsername" placeholder="Enter a username" required>
                 </div>
                 <div class="form-group">
-                    <label>{{password}}</label>
+                    <label class="fancy-font">{{password}}</label>
                     <input type="password" class="form-control col-4" id="inputPassword" placeholder="Enter a password" required>
                 </div>
                 <div class="form-group">
-                    <label>{{passwordConfirm}}</label>
+                    <label class="fancy-font">{{passwordConfirm}}</label>
                     <input type="password" class="form-control col-4" id="inputPasswordRepeat" placeholder="Repeat your password"
                         required>
                 </div>
-                <button id="signupButton" type="submit" class="btn btn-success pt-2 ">{{buttonMessage}}</button>
+                <button id="signupButton" type="submit" class="btn btn-success pt-2 fancy-font">{{buttonMessage}}</button>
             </form>
         </div>
     </script>
