Cole and I used handlebars to make another template so it shows the home page.

--- a/index.html
+++ b/index.html
@@ -75,6 +75,31 @@
         </div>
     </script>
 
+    <script id="showHome" type="text/x-handlebars-template">
+        <div class="container pt-4 pb-4 text-center">
+            <div class="card">
+                <div class="card-header card-color">
+                    <h1 class="fancy-font">
+                        {{welcomeUserMessage}}! <i class="fas fa-child"></i>
+                    </h1>
+                </div>
+            </div>
+        </div>
+        <div class="container text-center pb-4">
+            <button id="startNewGame" type="button" class="btn color-button fancy-font">
+                    <h1><i class="fas fa-long-arrow-alt-right"></i> {{buttonMessage}} <i class="fas fa-long-arrow-alt-left"></i></h1>
+            </button>
+        </div>
+        <div class="container">
+            <div class="card">
+                <div class="card-header card-color">
+                    <h1 class="fancy-font text-center">
+                        {{leaderBoardPlacement}}
+                    </h1>
+                </div>
+            </div>
+        </div>
+    </script>
 
 
 
