We made another Handlebars template to set up the game play page.

--- a/index.html
+++ b/index.html
@@ -101,6 +101,60 @@
         </div>
     </script>
 
+    <script id="showGameSet" type="text/x-handlebars-template">
+        <div class="container pt-4 pb-4 text-center">
+            <div class="card">
+                <div class="card-header card-color">
+                    <h1 class="fancy-font text-center">
+                        {{setGameMessage}}<i class="fas fa-child"></i>
+                    </h1>
+                    <h1 class="fancy-font text-center">Ref: {{ref}}</h1>
+                </div>
+            </div>
+            <div class="playerContainer d-flex pt-4 justify-content-center ">
+                <div id="playerOneInput" class="playerSelect pr-2">
+                    <label for="playerOne">{{playerOne}}</label>
+                    <input type="text" class="form-control" id="playerOne" placeholder="Enter Player 1..">
+                </div>
+                <div id="playerTwoInput" class="playerSelect pb-4">
+                        <label for="playerOne">{{playerTwo}}</label>
+                        <input type="text" class="form-control" id="playerTwo" placeholder="Enter Player 2..">
+                </div>
+            </div>
+            <div class="buttonContainer">
+                <button id="startGame" type="button" class="btn color-button">
+                    <h3 class="fancy-font">{{buttonMessage}}</h3>
+                </button>
+            </div>
+                
+            </div>
+    </script>
+
+    <script id="showScoreGame" type="text/x-handlebars-template">
+        <div class="container pt-4 pb-4 text-center">
+            <div class="card">
+                <div class="card-header card-color">
+                    <h1 class="fancy-font text-center">
+                        {{setScoreGame}}
+                    </h1>
+                    <h1 class="fancy-font text-center">Ref: {{ref}}</h1>
+                </div>
+            </div>
+            <div class="playerContainer d-flex pt-4 justify-content-around">
+                <div id="playerOneScore" class="playerScore">
+                    <h2>{{playerOne}}</h2>
+                    <h3>{{playerOneScore}}</h3>
+                    <button type="button" class="btn color-button">{{scoreButtonText}}</button>
+                </div>
+                <div id="playerTwoScore" class="playerScore">
+                    <h2>{{playerTwo}}</h2>
+                    <h3>{{playerTwoScore}}</h3>
+                    <button type="button" class="btn color-button">{{scoreButtonText2}}</button>
+                </div>
+            </div>
+        </div>
+    </script>
+
 
 
 
