--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
         <form method="POST">
             <div class="form-group ">
                 <label class="fancy-font text-white">{{username}}</label>
-                <input type="text" class="form-control col-4" id="existingUsername" placeholder="Enter your username" required>
+                <input type="text" class="form-control col-4" id="existingUsername" placeholder="Enter your username">
             </div>
             <div class="form-group ">
                 <label class="fancy-font text-white">{{password}}</label>
-                <input type="password" class="form-control col-4" id="existingPassword" placeholder="Enter your password" required>
+                <input type="password" class="form-control col-4" id="existingPassword" placeholder="Enter your password">
             </div>
-            <button id="loginButton" type="submit" class="btn btn-success pt-2 fancy-font">{{buttonMessage}}</button>
+            <button id="loginButton" type="button" class="btn btn-success pt-2 fancy-font">{{buttonMessage}}</button>
         </form>
     </div>
     </script>
@@ -78,7 +78,7 @@
     <script id="showHome" type="text/x-handlebars-template">
         <div class="container pt-4 pb-4 text-center">
             <div class="card">
-                <div class="card-header card-color">
+                <div id="welcomeUser" class="card-header card-color">
                     <h1 class="fancy-font">
                         {{welcomeUserMessage}}! <i class="fas fa-child"></i>
                     </h1>
